--- a/model.ipynb
+++ b/model.ipynb
@@ -1,24 +1,17 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "pip install pandas numpy matplotlib seaborn python-magic pymupdf python-docx pillow pytesseract openpyxl plotly requests\n"
-      ],
+        "# github repo for streamlit: https://github.com/Om-Suman/Data_Analyst_Agent"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,11 +19,10 @@
         "id": "MJ36S9BWv4hn",
         "outputId": "a2afd8f9-fca4-4dda-d232-8fabc92f6c6b"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
@@ -76,6 +68,9 @@
             "Successfully installed pymupdf-1.26.1 pytesseract-0.3.13 python-docx-1.1.2 python-magic-0.4.27\n"
           ]
         }
+      ],
+      "source": [
+        "pip install pandas numpy matplotlib seaborn python-magic pymupdf python-docx pillow pytesseract openpyxl plotly requests\n"
       ]
     },
     {
@@ -142,6 +137,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "gGK4Pw3Ow1DL"
+      },
+      "outputs": [],
       "source": [
         "def ask_data_agent(user_question, parsed_content, content_type):\n",
         "    if content_type == \"dataframe\":\n",
@@ -166,15 +166,15 @@
         "        raise ValueError(\"Unsupported content type\")\n",
         "\n",
         "    return query_llama_agent(prompt)\n"
-      ],
-      "metadata": {
-        "id": "gGK4Pw3Ow1DL"
-      },
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {
+        "id": "C2px9Rt4y6Ht"
+      },
+      "outputs": [],
       "source": [
         "# Step 4: Define main agent interaction logic\n",
         "\n",
@@ -215,15 +215,15 @@
         "        raise ValueError(\"Unsupported content type\")\n",
         "\n",
         "    return query_llama_agent(prompt)\n"
-      ],
-      "metadata": {
-        "id": "C2px9Rt4y6Ht"
-      },
-      "execution_count": 40,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "vqzP6Vnc4xSv"
+      },
+      "outputs": [],
       "source": [
         "# Step 5: Implement LLM code execution inside Jupyter Notebook for plotting if applicable\n",
         "\n",
@@ -255,24 +255,19 @@
         "        results.append((cleaned_code, output))\n",
         "\n",
         "    return results"
-      ],
-      "metadata": {
-        "id": "vqzP6Vnc4xSv"
-      },
-      "execution_count": 45,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "file_path = \"/content/Delinquency_prediction_dataset.xlsx\"\n",
-        "parsed_data, data_type = parse_file(file_path)\n"
-      ],
+      "execution_count": 42,
       "metadata": {
         "id": "n0db4foTxWys"
       },
-      "execution_count": 42,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "file_path = \"/content/Delinquency_prediction_dataset.xlsx\"\n",
+        "parsed_data, data_type = parse_file(file_path)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -285,11 +280,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "response = ask_data_agent(\"which age group has the most income\", parsed_data, data_type)\n",
-        "print(response)\n",
-        "extract_and_run_code(response, parsed_data)"
-      ],
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -298,11 +289,10 @@
         "id": "GFUk_UmhyPbh",
         "outputId": "b906d832-c942-46b5-b9cd-309c377406ba"
       },
-      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "🧾 Raw API Response: {\n",
             "  \"id\": \"nxsdNcj-zqrih-94ec702748689c3c\",\n",
@@ -374,32 +364,31 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "<string>:5: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[('import pandas as pd\\n\\n# Assuming \\'df\\' is your DataFrame\\n# Group by \\'Age_Group\\' and calculate the average \\'Income\\'\\naverage_income_by_age_group = df.groupby(\\'Age_Group\\')[\\'Income\\'].mean().reset_index()\\n\\n# Sort the result in descending order based on \\'Income\\'\\naverage_income_by_age_group = average_income_by_age_group.sort_values(by=\\'Income\\', ascending=False)\\n\\n# The age group with the most income is the first row after sorting\\nage_group_with_most_income = average_income_by_age_group.iloc[0][\\'Age_Group\\']\\n\\nprint(f\"The age group with the most income is: {age_group_with_most_income}\")\\nprint(average_income_by_age_group)',\n",
@@ -407,19 +396,39 @@
               " ('', '\\n▶️ Code Block #2:\\n\\n✅ Executed successfully.')]"
             ]
           },
+          "execution_count": 47,
           "metadata": {},
-          "execution_count": 47
+          "output_type": "execute_result"
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "response = ask_data_agent(\"which age group has the most income\", parsed_data, data_type)\n",
+        "print(response)\n",
+        "extract_and_run_code(response, parsed_data)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
