--- a/model.ipynb
+++ b/model.ipynb
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "C2px9Rt4y6Ht"
       },
@@ -191,7 +191,6 @@
         "    - Response from LLM agent\n",
         "    \"\"\"\n",
         "    if content_type == \"dataframe\":\n",
-        "        # Convert a small preview of the data to string for context\n",
         "        data_preview = parsed_content.head(10).to_markdown()\n",
         "        prompt = f\"\"\"You are a smart data analyst.\n",
         "Here is a preview of the dataset (first 10 rows):\n",
@@ -201,7 +200,7 @@
         "Answer in detail or provide instructions/code to perform the task.\"\"\"\n",
         "\n",
         "    elif content_type == \"text\":\n",
-        "        preview = parsed_content[:2000]  # Truncate to first 2000 characters\n",
+        "        preview = parsed_content[:2000]\n",
         "        prompt = f\"\"\"You are a document analysis expert.\n",
         "Here is some document content:\n",
         "\\\"\\\"\\\"\n",
@@ -219,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "vqzP6Vnc4xSv"
       },
@@ -238,7 +237,6 @@
         "    results = []\n",
         "\n",
         "    for i, code in enumerate(code_blocks):\n",
-        "        # 🧹 Clean model code: remove any 'df = pd.read_csv(...)'\n",
         "        cleaned_code = re.sub(r\"df\\s*=\\s*pd\\.read_csv\\(.*?\\)\", \"\", code.strip())\n",
         "\n",
         "        output = f\"\\n▶️ Code Block #{i + 1}:\\n{cleaned_code}\\n\"\n",
