--- a/model (1).ipynb
+++ b/model (1).ipynb
@@ -1,17 +1,24 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
       "source": [
-        "# github repo for streamlit: https://github.com/Om-Suman/Data_Analyst_Agent"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
+        "!pip install pandas numpy matplotlib seaborn python-magic pymupdf python-docx pillow pytesseract openpyxl plotly requests\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,10 +26,11 @@
         "id": "MJ36S9BWv4hn",
         "outputId": "a2afd8f9-fca4-4dda-d232-8fabc92f6c6b"
       },
+      "execution_count": 2,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
@@ -68,14 +76,41 @@
             "Successfully installed pymupdf-1.26.1 pytesseract-0.3.13 python-docx-1.1.2 python-magic-0.4.27\n"
           ]
         }
-      ],
-      "source": [
-        "pip install pandas numpy matplotlib seaborn python-magic pymupdf python-docx pillow pytesseract openpyxl plotly requests\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "source": [
+        "!pip install dotenv"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6TnvEnraOuCm",
+        "outputId": "213dd75f-0f26-4318-baa5-ea6b2359e955"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting dotenv\n",
+            "  Downloading dotenv-0.9.9-py2.py3-none-any.whl.metadata (279 bytes)\n",
+            "Collecting python-dotenv (from dotenv)\n",
+            "  Downloading python_dotenv-1.1.0-py3-none-any.whl.metadata (24 kB)\n",
+            "Downloading dotenv-0.9.9-py2.py3-none-any.whl (1.9 kB)\n",
+            "Downloading python_dotenv-1.1.0-py3-none-any.whl (20 kB)\n",
+            "Installing collected packages: python-dotenv, dotenv\n",
+            "Successfully installed dotenv-0.9.9 python-dotenv-1.1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
       "metadata": {
         "id": "Bva0WErOvovD"
       },
@@ -97,17 +132,25 @@
         "import base64\n",
         "import json\n",
         "import requests\n",
-        "\n",
+        "from dotenv import load_dotenv\n",
         "import openpyxl\n",
         "\n",
         "import plotly.express as px\n",
         "\n",
-        "TOGETHER_API_KEY = \"6a8dd2f17bb99e1c7e0bf156d4166c757abfa21cae1664b6149f6867596ebf57\"\n",
         "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Define model ID\n",
+        "import os\n",
+        "load_dotenv()\n",
         "LLAMA_MODEL_ID = \"meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\"\n",
-        "\n",
-        "\n",
+        "TOGETHER_API_KEY = os.getenv(\"TOGETHER_API_KEY\")\n",
         "def parse_file(file_path):\n",
         "    mime_type, _ = mimetypes.guess_type(file_path)\n",
         "\n",
@@ -133,15 +176,15 @@
         "        return text, \"text\"\n",
         "    else:\n",
         "        raise ValueError(f\"Unsupported file type: {file_path}\")\n"
-      ]
+      ],
+      "metadata": {
+        "id": "J2y4skRwPLN6"
+      },
+      "execution_count": 54,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
-      "metadata": {
-        "id": "gGK4Pw3Ow1DL"
-      },
-      "outputs": [],
       "source": [
         "def ask_data_agent(user_question, parsed_content, content_type):\n",
         "    if content_type == \"dataframe\":\n",
@@ -166,15 +209,15 @@
         "        raise ValueError(\"Unsupported content type\")\n",
         "\n",
         "    return query_llama_agent(prompt)\n"
-      ]
+      ],
+      "metadata": {
+        "id": "gGK4Pw3Ow1DL"
+      },
+      "execution_count": 53,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "C2px9Rt4y6Ht"
-      },
-      "outputs": [],
       "source": [
         "# Step 4: Define main agent interaction logic\n",
         "\n",
@@ -191,6 +234,7 @@
         "    - Response from LLM agent\n",
         "    \"\"\"\n",
         "    if content_type == \"dataframe\":\n",
+        "        # Convert a small preview of the data to string for context\n",
         "        data_preview = parsed_content.head(10).to_markdown()\n",
         "        prompt = f\"\"\"You are a smart data analyst.\n",
         "Here is a preview of the dataset (first 10 rows):\n",
@@ -200,7 +244,7 @@
         "Answer in detail or provide instructions/code to perform the task.\"\"\"\n",
         "\n",
         "    elif content_type == \"text\":\n",
-        "        preview = parsed_content[:2000]\n",
+        "        preview = parsed_content[:2000]  # Truncate to first 2000 characters\n",
         "        prompt = f\"\"\"You are a document analysis expert.\n",
         "Here is some document content:\n",
         "\\\"\\\"\\\"\n",
@@ -214,15 +258,15 @@
         "        raise ValueError(\"Unsupported content type\")\n",
         "\n",
         "    return query_llama_agent(prompt)\n"
-      ]
+      ],
+      "metadata": {
+        "id": "C2px9Rt4y6Ht"
+      },
+      "execution_count": 40,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vqzP6Vnc4xSv"
-      },
-      "outputs": [],
       "source": [
         "# Step 5: Implement LLM code execution inside Jupyter Notebook for plotting if applicable\n",
         "\n",
@@ -237,6 +281,7 @@
         "    results = []\n",
         "\n",
         "    for i, code in enumerate(code_blocks):\n",
+        "        # 🧹 Clean model code: remove any 'df = pd.read_csv(...)'\n",
         "        cleaned_code = re.sub(r\"df\\s*=\\s*pd\\.read_csv\\(.*?\\)\", \"\", code.strip())\n",
         "\n",
         "        output = f\"\\n▶️ Code Block #{i + 1}:\\n{cleaned_code}\\n\"\n",
@@ -253,19 +298,24 @@
         "        results.append((cleaned_code, output))\n",
         "\n",
         "    return results"
-      ]
+      ],
+      "metadata": {
+        "id": "vqzP6Vnc4xSv"
+      },
+      "execution_count": 45,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
-      "metadata": {
-        "id": "n0db4foTxWys"
-      },
-      "outputs": [],
       "source": [
         "file_path = \"/content/Delinquency_prediction_dataset.xlsx\"\n",
         "parsed_data, data_type = parse_file(file_path)\n"
-      ]
+      ],
+      "metadata": {
+        "id": "n0db4foTxWys"
+      },
+      "execution_count": 42,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -278,7 +328,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "source": [
+        "response = ask_data_agent(\"which age group has the most income\", parsed_data, data_type)\n",
+        "print(response)\n",
+        "extract_and_run_code(response, parsed_data)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -287,10 +341,11 @@
         "id": "GFUk_UmhyPbh",
         "outputId": "b906d832-c942-46b5-b9cd-309c377406ba"
       },
+      "execution_count": 47,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "🧾 Raw API Response: {\n",
             "  \"id\": \"nxsdNcj-zqrih-94ec702748689c3c\",\n",
@@ -362,31 +417,32 @@
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "<string>:5: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n"
           ]
         },
         {
+          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
+          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[('import pandas as pd\\n\\n# Assuming \\'df\\' is your DataFrame\\n# Group by \\'Age_Group\\' and calculate the average \\'Income\\'\\naverage_income_by_age_group = df.groupby(\\'Age_Group\\')[\\'Income\\'].mean().reset_index()\\n\\n# Sort the result in descending order based on \\'Income\\'\\naverage_income_by_age_group = average_income_by_age_group.sort_values(by=\\'Income\\', ascending=False)\\n\\n# The age group with the most income is the first row after sorting\\nage_group_with_most_income = average_income_by_age_group.iloc[0][\\'Age_Group\\']\\n\\nprint(f\"The age group with the most income is: {age_group_with_most_income}\")\\nprint(average_income_by_age_group)',\n",
@@ -394,39 +450,19 @@
               " ('', '\\n▶️ Code Block #2:\\n\\n✅ Executed successfully.')]"
             ]
           },
-          "execution_count": 47,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 47
         },
         {
+          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
-      ],
-      "source": [
-        "response = ask_data_agent(\"which age group has the most income\", parsed_data, data_type)\n",
-        "print(response)\n",
-        "extract_and_run_code(response, parsed_data)"
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
