--- a/model (1).ipynb
+++ b/model (1).ipynb
@@ -1,24 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pandas numpy matplotlib seaborn python-magic pymupdf python-docx pillow pytesseract openpyxl plotly requests\n"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,11 +10,10 @@
         "id": "MJ36S9BWv4hn",
         "outputId": "a2afd8f9-fca4-4dda-d232-8fabc92f6c6b"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
@@ -76,41 +59,14 @@
             "Successfully installed pymupdf-1.26.1 pytesseract-0.3.13 python-docx-1.1.2 python-magic-0.4.27\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install dotenv"
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6TnvEnraOuCm",
-        "outputId": "213dd75f-0f26-4318-baa5-ea6b2359e955"
-      },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting dotenv\n",
-            "  Downloading dotenv-0.9.9-py2.py3-none-any.whl.metadata (279 bytes)\n",
-            "Collecting python-dotenv (from dotenv)\n",
-            "  Downloading python_dotenv-1.1.0-py3-none-any.whl.metadata (24 kB)\n",
-            "Downloading dotenv-0.9.9-py2.py3-none-any.whl (1.9 kB)\n",
-            "Downloading python_dotenv-1.1.0-py3-none-any.whl (20 kB)\n",
-            "Installing collected packages: python-dotenv, dotenv\n",
-            "Successfully installed dotenv-0.9.9 python-dotenv-1.1.0\n"
-          ]
-        }
+      "source": [
+        "!pip install pandas numpy matplotlib seaborn python-magic pymupdf python-docx pillow pytesseract openpyxl plotly requests\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "Bva0WErOvovD"
       },
@@ -134,7 +90,7 @@
         "import requests\n",
         "from dotenv import load_dotenv\n",
         "import openpyxl\n",
-        "\n",
+        "import streamlit as st\n",
         "import plotly.express as px\n",
         "\n",
         "\n",
@@ -145,12 +101,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "J2y4skRwPLN6"
+      },
+      "outputs": [],
       "source": [
         "# Define model ID\n",
         "import os\n",
-        "load_dotenv()\n",
         "LLAMA_MODEL_ID = \"meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\"\n",
-        "TOGETHER_API_KEY = os.getenv(\"TOGETHER_API_KEY\")\n",
+        "api_key = st.secrets[\"API_KEY\"]\n",
         "def parse_file(file_path):\n",
         "    mime_type, _ = mimetypes.guess_type(file_path)\n",
         "\n",
@@ -176,15 +136,15 @@
         "        return text, \"text\"\n",
         "    else:\n",
         "        raise ValueError(f\"Unsupported file type: {file_path}\")\n"
-      ],
-      "metadata": {
-        "id": "J2y4skRwPLN6"
-      },
-      "execution_count": 54,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "id": "gGK4Pw3Ow1DL"
+      },
+      "outputs": [],
       "source": [
         "def ask_data_agent(user_question, parsed_content, content_type):\n",
         "    if content_type == \"dataframe\":\n",
@@ -209,15 +169,15 @@
         "        raise ValueError(\"Unsupported content type\")\n",
         "\n",
         "    return query_llama_agent(prompt)\n"
-      ],
-      "metadata": {
-        "id": "gGK4Pw3Ow1DL"
-      },
-      "execution_count": 53,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {
+        "id": "C2px9Rt4y6Ht"
+      },
+      "outputs": [],
       "source": [
         "# Step 4: Define main agent interaction logic\n",
         "\n",
@@ -258,15 +218,15 @@
         "        raise ValueError(\"Unsupported content type\")\n",
         "\n",
         "    return query_llama_agent(prompt)\n"
-      ],
-      "metadata": {
-        "id": "C2px9Rt4y6Ht"
-      },
-      "execution_count": 40,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "vqzP6Vnc4xSv"
+      },
+      "outputs": [],
       "source": [
         "# Step 5: Implement LLM code execution inside Jupyter Notebook for plotting if applicable\n",
         "\n",
@@ -298,24 +258,19 @@
         "        results.append((cleaned_code, output))\n",
         "\n",
         "    return results"
-      ],
-      "metadata": {
-        "id": "vqzP6Vnc4xSv"
-      },
-      "execution_count": 45,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "file_path = \"/content/Delinquency_prediction_dataset.xlsx\"\n",
-        "parsed_data, data_type = parse_file(file_path)\n"
-      ],
+      "execution_count": 42,
       "metadata": {
         "id": "n0db4foTxWys"
       },
-      "execution_count": 42,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "file_path = \"/content/Delinquency_prediction_dataset.xlsx\"\n",
+        "parsed_data, data_type = parse_file(file_path)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -328,11 +283,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "response = ask_data_agent(\"which age group has the most income\", parsed_data, data_type)\n",
-        "print(response)\n",
-        "extract_and_run_code(response, parsed_data)"
-      ],
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -341,11 +292,10 @@
         "id": "GFUk_UmhyPbh",
         "outputId": "b906d832-c942-46b5-b9cd-309c377406ba"
       },
-      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "🧾 Raw API Response: {\n",
             "  \"id\": \"nxsdNcj-zqrih-94ec702748689c3c\",\n",
@@ -417,32 +367,31 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "<string>:5: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[('import pandas as pd\\n\\n# Assuming \\'df\\' is your DataFrame\\n# Group by \\'Age_Group\\' and calculate the average \\'Income\\'\\naverage_income_by_age_group = df.groupby(\\'Age_Group\\')[\\'Income\\'].mean().reset_index()\\n\\n# Sort the result in descending order based on \\'Income\\'\\naverage_income_by_age_group = average_income_by_age_group.sort_values(by=\\'Income\\', ascending=False)\\n\\n# The age group with the most income is the first row after sorting\\nage_group_with_most_income = average_income_by_age_group.iloc[0][\\'Age_Group\\']\\n\\nprint(f\"The age group with the most income is: {age_group_with_most_income}\")\\nprint(average_income_by_age_group)',\n",
@@ -450,19 +399,39 @@
               " ('', '\\n▶️ Code Block #2:\\n\\n✅ Executed successfully.')]"
             ]
           },
+          "execution_count": 47,
           "metadata": {},
-          "execution_count": 47
+          "output_type": "execute_result"
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "<Figure size 640x480 with 0 Axes>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "response = ask_data_agent(\"which age group has the most income\", parsed_data, data_type)\n",
+        "print(response)\n",
+        "extract_and_run_code(response, parsed_data)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
